Add CloudSim release version in pom.xml and refactor SLAAwareHippopotamusPolicy to use simulation instance for time access. Update VisualizationGenerator to handle convergence data more efficiently. Refactor DatasetIntegration to remove Google trace support and improve Azure trace loading. Adjust MetricsCalculator for power consumption calculations. Update AppTest for configuration file handling.